--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -31,6 +31,9 @@
   background-color: #212121;
   line-height: 1.4;
 }
+.h3 {
+  font-size: larger;
+}
 .header {
   background-color: #121212;
   padding: 5px;
